--- a/src/modules/AddTodo/styles.scss
+++ b/src/modules/AddTodo/styles.scss
@@ -6,6 +6,11 @@
     display: flex;
     justify-content: space-between;
     gap: 24px;
+
+    @media (max-width: 575px) {
+      flex-direction: column;
+      gap: 12px;
+    }
   }
 
   &__input {
