add react-datapicker and logic

--- a/src/assets/styles/varibles.scss
+++ b/src/assets/styles/varibles.scss
@@ -11,4 +11,6 @@
   --radius: 4px;
   --element-padding: 0.5rem 1rem;
   --element-padding-square: 0.5rem;
+
+  --transition-250: 250ms ease-in-out;
 }
