--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -7,6 +7,7 @@
 body {
   font-size: 16px;
   font-family: var(--font-family);
+  line-height: 140%;
 
   background-color: var(--primary-white);
   color: var(--primary-dark);
