add desc textarea for task

--- a/src/elements/Input/Input.scss
+++ b/src/elements/Input/Input.scss
@@ -2,4 +2,8 @@
   padding: var(--element-padding);
   border-radius: var(--radius);
   border: none;
+
+  &--transparent {
+    background-color: transparent;
+  }
 }
