--- a/src/modules/TaskInfo/TaskInfo.scss
+++ b/src/modules/TaskInfo/TaskInfo.scss
@@ -6,8 +6,28 @@
     width: 100%;
     max-width: 600px;
     height: 100%;
-    background-color: var(--primary-gray);
+    background-color: var(--primary-white);
     padding: var(--element-padding);
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  &__title {
+    width: 100%;
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+
+  &__desc {
+    width: 100%;
+    min-width: 100%;
+  }
+
+  &__block {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
   }
 
   // .ReactModal__Overlay {
