cleaning props on components and add desc for TodoItem

--- a/src/assets/styles/varibles.scss
+++ b/src/assets/styles/varibles.scss
@@ -11,6 +11,10 @@
   --radius: 4px;
   --element-padding: 0.5rem 1rem;
   --element-padding-square: 0.5rem;
+  --element-padding-x: 0 1rem;
+  --element-padding-y: 1rem 0;
+  --element-padding-xs: 0 0.5rem;
+  --element-padding-ys: 0.5rem 0;
 
   --transition-250: 250ms ease-in-out;
 }
